--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.116.1",
     "psycopg2-binary>=2.9.10",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.42",
 ]
