Project refactor based on fasapi project template

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
                 "--port",
                 "8000",
                 "--reload"
-            ]
+            ],
+            "justMyCode": false
         }
     ]
 }
